# lab-lazy-evaluation

./: README.md  lab-lazy-evaluation.cabal  stack.yaml
bench/: Main.hs
src/: Lab.hs
test/: Spec.hs
